linted OracleDatapointBuilder.setDefaultGeneralValues to use toList() when returning immutable list